# BackendLivrosEbacPython

./: .gitignore  Dockerfile  README.md  app.py  boaspraticas  calculadora.py  celery_app.py  deployment.yaml  docker-compose.yml  ex11.py  kafka_producer.py  lab1.py  lab2.py  livros.db  logging.yaml  main.py  main_assync.py  main_backup.py  pyproject.toml  script.sh  service.yaml  tasks.py
.github/workflows/: python-app.yml
antigos/: ex4.py  ex5.py  ex6.py  ex8.py  lab4.py  lab5.py  lab8.py  lab8amigobo.py
logstash/: logstash.conf
tests/: test_auth.py  test_auth1.py  test_database.py  test_hello_world.py  test_soma.py  test_tasks.py  test_tasks_celery.py  test_tasks_endpoint.py
