[project]
name = "backendlivros-ebac-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Isabelle",email = "isa_landini@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[stardard] (>=0.121.0,<0.122.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
