[project]
name = "backendlivros-ebac-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Isabelle",email = "isa_landini@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi[standard] (>=0.122.0,<0.123.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "redis (>=7.4.0,<8.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "kafka-python (>=2.3.1,<3.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "elasticsearch (<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]


[dependency-groups]
dev = [
    "pytest-mock (>=3.15.1,<4.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]
